Keep session persistence off Netty event loops